--- a/music_catalog_app/package.json
+++ b/music_catalog_app/package.json
@@ -8,11 +8,13 @@
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-dialog": "^0.10.0",
     "react-bootstrap-table": "^4.3.1",
+    "react-burger-menu": "^2.5.2",
     "react-dom": "^16.4.1",
     "react-notify-toast": "^0.5.0",
     "react-player-controls": "^0.5.20",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-sidebar": "^2.3.2",
     "react-toastify": "^4.1.0",
     "styled-components": "^3.3.3"
   },
